--- a/package.json
+++ b/package.json
@@ -10,27 +10,25 @@
   "engines": {
     "node": ">=18.12.0"
   },
+  "private": true,
   "type": "module",
   "dependencies": {
     "@discordjs/opus": "0.9.0",
-    "@discordjs/voice": "0.11.0",
-    "discord.js": "14.6.0",
-    "dotenv": "16.0.3",
-    "mongodb": "4.11.0",
+    "@discordjs/voice": "0.14.0",
+    "discord.js": "14.7.1",
+    "mongodb": "4.12.1",
     "node-cron": "3.0.2",
     "pino": "8.7.0",
     "sharp": "0.31.2",
     "sodium-native": "3.4.1"
   },
   "devDependencies": {
-    "@discordjs/rest": "1.3.0",
-    "@types/node": "18.11.9",
-    "@types/node-cron": "3.0.5",
+    "@discordjs/rest": "1.4.0",
+    "@types/node": "18.11.10",
+    "@types/node-cron": "3.0.6",
     "@types/sharp": "0.31.0",
-    "discord-api-types": "0.37.17",
-    "rimraf": "3.0.2",
-    "typescript": "4.8.4",
-    "xo": "0.52.4"
+    "typescript": "4.9.3",
+    "xo": "0.53.1"
   },
   "optionalDependencies": {
     "bufferutil": "4.0.7",
@@ -40,7 +38,7 @@
   },
   "scripts": {
     "lint": "xo",
-    "build": "rimraf dist/ && tsc",
+    "build": "tsc",
     "deploy": "node dist/deploy.js"
   },
   "xo": {
@@ -54,6 +52,7 @@
     "rules": {
       "default-case": "off",
       "getter-return": "off",
+      "max-params": "off",
       "@typescript-eslint/naming-convention": "off",
       "@typescript-eslint/no-implicit-any-catch": "off",
       "n/file-extension-in-import": "off"
